--- a/src/HttpTracer.TestApp.Android/Properties/AndroidManifest.xml
+++ b/src/HttpTracer.TestApp.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.appname">
-	<uses-sdk android:minSdkVersion="21" />
-        <uses-permission android:name="android.permission.INTERNET" />
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27" />
+	<uses-permission android:name="android.permission.INTERNET" />
 	<application android:label="HttpTracer.TestApp.Android" android:icon="@mipmap/ic_launcher"></application>
 </manifest>
