--- a/src/HttpTracer/HttpTracer.csproj
+++ b/src/HttpTracer/HttpTracer.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netstandard1.4</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Product>$(AssemblyName) ($(TargetFramework))</Product>
     <AssemblyVersion>1.0.1.0</AssemblyVersion>
     <AssemblyFileVersion>1.0.1.0</AssemblyFileVersion>
@@ -11,34 +11,22 @@
     <PackageId>HttpTracer</PackageId>
     <PackOnBuild>true</PackOnBuild>
     <NeutralLanguage>en</NeutralLanguage>
-    <PackageLicenseUrl>https://github.com/TorontoMobileDevelopers/HttpTracer/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageLicenseUrl>https://github.com/BSILabs/HttpTracer/blob/master/LICENSE</PackageLicenseUrl>
     <Owners>Toronto Mobile .NET Developers Group</Owners>
-    <PackageProjectUrl>https://github.com/TorontoMobileDevelopers/HttpTracer</PackageProjectUrl>
-    <PackageIconUrl>https://raw.githubusercontent.com/TorontoMobileDevelopers/HttpTracer/master/art/HttpTracer.png</PackageIconUrl>
+    <PackageProjectUrl>https://github.com/BSILabs/HttpTracer</PackageProjectUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/BSILabs/HttpTracer/master/art/HttpTracer.png</PackageIconUrl>
     <Summary>A simple http tracing library to write request and response information to your output window. Making your life easier when debugging http calls!</Summary>
     <PackageTags>xamarin, windows, ios, android, http, tracing</PackageTags>
     <Title>HttpTracer - A Http tracking lib</Title>
     <Description>A simple http tracing library to write request and response information to your output window. Making your life easier when debugging http calls!</Description>
-    <Copyright>2017 &amp; Toronto Mobile .NET Developers Group</Copyright>
-    <RepositoryUrl>https://github.com/TorontoMobileDevelopers/HttpTracer</RepositoryUrl>
-    <PackageReleaseNotes>See: https://github.com/TorontoMobileDevelopers/HttpTracer</PackageReleaseNotes>
+    <Copyright>2019 BSI Labs</Copyright>
+    <RepositoryUrl>https://github.com/BSILabs/HttpTracer</RepositoryUrl>
+    <PackageReleaseNotes>See: https://github.com/BSILabs/HttpTracer</PackageReleaseNotes>
 
     <LangVersion>default</LangVersion>
 
     <DefineConstants>$(DefineConstants);</DefineConstants>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <RootNamespace>HttpTracer</RootNamespace>
-    <GenerateDocumentationFile Condition=" '$(Configuration)' == 'Release' ">true</GenerateDocumentationFile>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Condition=" '$(TargetFramework)' == 'uap10.0.16299' " Include="Microsoft.NETCore.UniversalWindowsPlatform " Version="6.0.6" />
-    <PackageReference Include="MSBuild.Sdk.Extras" Version="1.2.0" PrivateAssets="All" />
-
-    <Reference Condition=" '$(TargetFramework)' == 'Xamarin.Mac20' " Include="System.Net.Http" />
-  </ItemGroup>
-
-
-  <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
-
 </Project>
