--- a/src/HttpTracer.TestApp/HttpTracer.TestApp.csproj
+++ b/src/HttpTracer.TestApp/HttpTracer.TestApp.csproj
@@ -5,8 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
-    <PackageReference Include="Prism.Autofac.Forms" Version="7.0.0.396" />
+    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+    <PackageReference Include="Refractored.MvvmHelpers" Version="1.5.1-beta" />
+    <PackageReference Include="Xamarin.Forms" Version="4.1.0.778454" />
+    <PackageReference Include="Prism.Autofac.Forms" Version="7.1.0.431" />
+    <PackageReference Include="Xamarin.HotReload" Version="1.5.2" />
   </ItemGroup>
 
   <ItemGroup>
