[M] expose protected methods to preprocess messages before logging and introduces json formatting. Closes #50, Closes #44

--- a/src/HttpTracer/HttpTracer.csproj
+++ b/src/HttpTracer/HttpTracer.csproj
@@ -38,4 +38,11 @@
     <Compile Include="**\*.shared.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
+
+  <ItemGroup>
+      <!-- internals visible to test class only -->
+      <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+          <_Parameter1>HttpTracer.Tests</_Parameter1>
+      </AssemblyAttribute>
+  </ItemGroup>
 </Project>
